[gd_scene load_steps=19 format=3 uid="uid://drgnxlnejcyws"]

[ext_resource type="Script" path="res://src/game/game.gd" id="1_kpppj"]
[ext_resource type="Script" path="res://src/game/input_handlers/main_game_input_handler.gd" id="2_8gkql"]
[ext_resource type="Script" path="res://src/game/input_handlers/input_handler.gd" id="2_gsqld"]
[ext_resource type="Script" path="res://src/map/map.gd" id="3_2obac"]
[ext_resource type="Script" path="res://src/game/input_handlers/game_over_input_handler.gd" id="3_gddyw"]
[ext_resource type="Script" path="res://src/map/dungeon_generator.gd" id="4_50hhx"]
[ext_resource type="Script" path="res://src/game/input_handlers/history_viewer.gd" id="5_4wike"]
[ext_resource type="Script" path="res://src/map/field_of_view.gd" id="5_qhm6d"]
[ext_resource type="Texture2D" uid="uid://g7baipmle1bo" path="res://assets/monochrome_packed.png" id="8_mbx6k"]
[ext_resource type="Script" path="res://src/gui/mouseover_checker.gd" id="9_cuurw"]
[ext_resource type="Script" path="res://src/gui/hp_display.gd" id="9_h1os6"]
[ext_resource type="FontFile" uid="uid://c8eleccfxjvht" path="res://assets/fonts/Kenney Pixel Square.ttf" id="10_b3d3j"]
[ext_resource type="Script" path="res://src/gui/message_log.gd" id="11_er25w"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_0vd13"]
content_margin_left = 8.0
content_margin_top = 8.0
content_margin_right = 8.0
content_margin_bottom = 8.0
texture = ExtResource("8_mbx6k")
texture_margin_left = 5.0
texture_margin_top = 5.0
texture_margin_right = 5.0
texture_margin_bottom = 5.0
region_rect = Rect2(768, 240, 16, 16)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ujipi"]
bg_color = Color(0.498039, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jds37"]
bg_color = Color(0, 0.498039, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_4k0j0"]
font = ExtResource("10_b3d3j")
outline_size = 4
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_x4l6u"]
font = ExtResource("10_b3d3j")

[node name="InterfaceRoot" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SubViewportContainer" type="SubViewportContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 5.0
stretch = true

[node name="SubViewport" type="SubViewport" parent="VBoxContainer/SubViewportContainer"]
disable_3d = true
handle_input_locally = false
canvas_item_default_texture_filter = 0
size = Vector2i(1200, 663)
render_target_update_mode = 4

[node name="Game" type="Node2D" parent="VBoxContainer/SubViewportContainer/SubViewport"]
script = ExtResource("1_kpppj")

[node name="InputHandler" type="Node" parent="VBoxContainer/SubViewportContainer/SubViewport/Game"]
script = ExtResource("2_gsqld")

[node name="MainGameInputHandler" type="Node" parent="VBoxContainer/SubViewportContainer/SubViewport/Game/InputHandler"]
script = ExtResource("2_8gkql")

[node name="GameOverInputHandler" type="Node" parent="VBoxContainer/SubViewportContainer/SubViewport/Game/InputHandler"]
script = ExtResource("3_gddyw")

[node name="HistoryViewer" type="Node" parent="VBoxContainer/SubViewportContainer/SubViewport/Game/InputHandler"]
script = ExtResource("5_4wike")
messages_panel_path = NodePath("../../../../../InfoBar/MessagePanel")
message_log_path = NodePath("../../../../../InfoBar/MessagePanel/MessageLog")

[node name="Map" type="Node2D" parent="VBoxContainer/SubViewportContainer/SubViewport/Game"]
script = ExtResource("3_2obac")
fov_radius = null

[node name="DungeonGenerator" type="Node" parent="VBoxContainer/SubViewportContainer/SubViewport/Game/Map"]
script = ExtResource("4_50hhx")

[node name="FieldOfView" type="Node" parent="VBoxContainer/SubViewportContainer/SubViewport/Game/Map"]
script = ExtResource("5_qhm6d")

[node name="Tiles" type="Node2D" parent="VBoxContainer/SubViewportContainer/SubViewport/Game/Map"]

[node name="Entities" type="Node2D" parent="VBoxContainer/SubViewportContainer/SubViewport/Game/Map"]

[node name="MouseoverChecker" type="Node2D" parent="VBoxContainer/SubViewportContainer/SubViewport/Game/Map"]
script = ExtResource("9_cuurw")

[node name="Camera2D" type="Camera2D" parent="VBoxContainer/SubViewportContainer/SubViewport/Game"]
zoom = Vector2(2, 2)

[node name="InfoBar" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 0

[node name="StatsPanel" type="PanelContainer" parent="VBoxContainer/InfoBar"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxTexture_0vd13")

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/InfoBar/StatsPanel"]
layout_mode = 2

[node name="HpDisplay" type="MarginContainer" parent="VBoxContainer/InfoBar/StatsPanel/VBoxContainer"]
layout_mode = 2
script = ExtResource("9_h1os6")

[node name="HpBar" type="ProgressBar" parent="VBoxContainer/InfoBar/StatsPanel/VBoxContainer/HpDisplay"]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_ujipi")
theme_override_styles/fill = SubResource("StyleBoxFlat_jds37")
step = 1.0
show_percentage = false

[node name="HpLabel" type="Label" parent="VBoxContainer/InfoBar/StatsPanel/VBoxContainer/HpDisplay"]
unique_name_in_owner = true
layout_mode = 2
label_settings = SubResource("LabelSettings_4k0j0")
horizontal_alignment = 1
vertical_alignment = 1

[node name="MouseoverLabel" type="Label" parent="VBoxContainer/InfoBar/StatsPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
label_settings = SubResource("LabelSettings_x4l6u")

[node name="MessagePanel" type="PanelContainer" parent="VBoxContainer/InfoBar"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
theme_override_styles/panel = SubResource("StyleBoxTexture_0vd13")

[node name="MessageLog" type="ScrollContainer" parent="VBoxContainer/InfoBar/MessagePanel"]
layout_mode = 2
horizontal_scroll_mode = 0
vertical_scroll_mode = 3
script = ExtResource("11_er25w")

[node name="MessageList" type="VBoxContainer" parent="VBoxContainer/InfoBar/MessagePanel/MessageLog"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[connection signal="player_created" from="VBoxContainer/SubViewportContainer/SubViewport/Game" to="VBoxContainer/InfoBar/StatsPanel/VBoxContainer/HpDisplay" method="initialize"]
[connection signal="entities_focussed" from="VBoxContainer/SubViewportContainer/SubViewport/Game/Map/MouseoverChecker" to="VBoxContainer/InfoBar/StatsPanel/VBoxContainer/MouseoverLabel" method="set_text"]
